# 100-day-CUDA-challenge

./: .gitignore  CMakeLists.txt
day01/: add.cu  main.cu
day02/: naive_exp.cu
day03/: saxpy.cu
day04/: cuda_fma.cu
day05/: matmul_sharedmemo.cu
